src/test/deca/context/valid/with_object/override_method_to_public.deca
class A{ // not sure of this one ...
    protected int m = 1;
}

class B extends A{
    int m = 2;
}