src/test/deca/context/invalid/with-object/instanceof_op_wrong_left3.deca
class A{}

{
    A a = new A();
    1.2f instanceof A;
}